--- a/HTML/home_page.html
+++ b/HTML/home_page.html
@@ -171,8 +171,11 @@
           <div class="card mb-3">
             <img class="card-img-top" src="../midia/product1.png">
             <div class="card-body">
-              <h6 class="card-title">Kristina Dam Oak Table With</h6>
-              <p class="card-text">$ 799.55</p>
+              <h6 class="card-title">Kristina Dam Oak Table With</h6>    
+              <div class="btn-group" role="group" aria-label="Basic example">
+                <button type="button" class="btn border-secondary">$ 799.55</button>
+                <button type="button" class="btn border-secondary">BUY NOW</button>                
+              </div>
             </div>
           </div>          
         </div>
@@ -181,8 +184,11 @@
           <div class="card mb-3">
             <img class="card-img-top" src="../midia/product2.png">
             <div class="card-body">
-              <h6 class="card-title">Hay - About A Lounge Chair AAL</h6>
-              <p class="card-text">$ 659.55</p>
+              <h6 class="card-title">Hay - About A Lounge Chair AAL</h6>              
+              <div class="btn-group" role="group" aria-label="Basic example">
+                <button type="button" class="btn border-secondary">$ 659.55</button>
+                <button type="button" class="btn border-secondary">BUY NOW</button>                
+              </div>
             </div>
           </div>            
         </div>
@@ -192,7 +198,10 @@
             <img class="card-img-top" src="../midia/product3.png">
             <div class="card-body">
               <h6 class="card-title">Active Facial Mask and Charcoal</h6>
-              <p class="card-text">$ 129.55</p>
+              <div class="btn-group" role="group" aria-label="Basic example">
+                <button type="button" class="btn border-secondary">$ 129.55</button>
+                <button type="button" class="btn border-secondary">BUY NOW</button>
+              </div>
             </div>
           </div>          
         </div>
@@ -202,7 +211,10 @@
             <img class="card-img-top" src="../midia/product4.png">
             <div class="card-body">
               <h6 class="card-title">Cocktail Table Walnut | YES</h6>
-              <p class="card-text"> $299.99</p>
+              <div class="btn-group" role="group" aria-label="Basic example">
+                <button type="button" class="btn border-secondary">$ 299.99</button>
+                <button type="button" class="btn border-secondary">BUY NOW</button>
+              </div>
             </div>
           </div>          
         </div>
@@ -212,7 +224,10 @@
             <img class="card-img-top" src="../midia/product5.png">
             <div class="card-body">
               <h6 class="card-title">Hay - About A Lounge Chair AAL</h6>
-              <p class="card-text">$ 659.55</p>
+              <div class="btn-group" role="group" aria-label="Basic example">
+                <button type="button" class="btn border-secondary">$ 659.55</button>
+                <button type="button" class="btn border-secondary">BUY NOW</button>
+              </div>
             </div>
           </div>          
         </div>  
@@ -222,7 +237,10 @@
             <img class="card-img-top" src="../midia/product6.png">
             <div class="card-body">
               <h6 class="card-title">TORY DESK CALENDAR</h6>
-              <p class="card-text">$ 410.99</p>
+              <div class="btn-group" role="group" aria-label="Basic example">
+                <button type="button" class="btn border-secondary">$ 410.99</button>
+                <button type="button" class="btn border-secondary">BUY NOW</button>
+              </div>
             </div>
           </div>          
         </div>
@@ -232,7 +250,10 @@
             <img class="card-img-top" src="../midia/product7.png">
             <div class="card-body">
               <h6 class="card-title">CH445 Wing Chair SUITE NY</h6>
-              <p class="card-text">$ 330.55</p>
+              <div class="btn-group" role="group" aria-label="Basic example">
+                <button type="button" class="btn border-secondary">$ 330.55</button>
+                <button type="button" class="btn border-secondary">BUY NOW</button>
+              </div>
             </div>
           </div>          
         </div>  
