product landing page implemented(yet to give some final touchew) & shopping cart page and funcionality started to be implemented

--- a/HTML/home_page.html
+++ b/HTML/home_page.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <link rel="stylesheet" href="../CSS/style.CSS">
-    <title>E-commerce Project</title>
+    <title>Home Page</title>
   </head>
   <body>
     <!--NAVIGATION BAR-->
@@ -89,8 +89,8 @@
               <li class="nav-item">
                 <a class="nav-link" href="404.html"><img src="../midia/heart.png"></a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="404.html"><img src="../midia/bag.png"></a>
+              <li class="nav-item cart">
+                <a class="nav-link" href="cart_page.html"><img src="../midia/bag.png"><span>0</span></a>
               </li>
             </ul>
           </ul>
@@ -171,10 +171,11 @@
           <div class="card mb-3">
             <img class="card-img-top" src="../midia/product1.png">
             <div class="card-body">
-              <h6 class="card-title">Kristina Dam Oak Table With</h6>    
+              <h6 class="card-title">Kristina Dam Oak Table With</h6>
+              <p class="card-text">$ 799.55</p>   
               <div class="btn-group" role="group" aria-label="Basic example">
-                <button type="button" class="btn border-secondary">$ 799.55</button>
-                <button type="button" class="btn border-secondary">BUY NOW</button>                
+                <button type="button" class="btn border-secondary"><a class="add-cart">ADD TO CART</a></button>
+                <button type="button" class="btn border-secondary"><a href="product_landing_page.html">BUY NOW</a></button>
               </div>
             </div>
           </div>          
@@ -184,10 +185,11 @@
           <div class="card mb-3">
             <img class="card-img-top" src="../midia/product2.png">
             <div class="card-body">
-              <h6 class="card-title">Hay - About A Lounge Chair AAL</h6>              
+              <h6 class="card-title">Hay - About A Lounge Chair AAL</h6>
+              <p class="card-text">$ 659.55</p>            
               <div class="btn-group" role="group" aria-label="Basic example">
-                <button type="button" class="btn border-secondary">$ 659.55</button>
-                <button type="button" class="btn border-secondary">BUY NOW</button>                
+                <button type="button" class="btn border-secondary"><a class="add-cart">ADD TO CART</a></button>
+                <button type="button" class="btn border-secondary"><a href="product_landing_page.html">BUY NOW</a></button>                
               </div>
             </div>
           </div>            
@@ -198,9 +200,10 @@
             <img class="card-img-top" src="../midia/product3.png">
             <div class="card-body">
               <h6 class="card-title">Active Facial Mask and Charcoal</h6>
+              <p class="card-text">$ 129.55</p>
               <div class="btn-group" role="group" aria-label="Basic example">
-                <button type="button" class="btn border-secondary">$ 129.55</button>
-                <button type="button" class="btn border-secondary">BUY NOW</button>
+                <button type="button" class="btn border-secondary"><a class="add-cart">ADD TO CART</a></button>
+                <button type="button" class="btn border-secondary"><a href="product_landing_page.html">BUY NOW</a></button>
               </div>
             </div>
           </div>          
@@ -211,9 +214,10 @@
             <img class="card-img-top" src="../midia/product4.png">
             <div class="card-body">
               <h6 class="card-title">Cocktail Table Walnut | YES</h6>
+              <p class="card-text">$ 299.99</p>
               <div class="btn-group" role="group" aria-label="Basic example">
-                <button type="button" class="btn border-secondary">$ 299.99</button>
-                <button type="button" class="btn border-secondary">BUY NOW</button>
+                <button type="button" class="btn border-secondary"><a class="add-cart">ADD TO CART</a></button>
+                <button type="button" class="btn border-secondary"><a href="product_landing_page.html">BUY NOW</a></button>
               </div>
             </div>
           </div>          
@@ -224,9 +228,10 @@
             <img class="card-img-top" src="../midia/product5.png">
             <div class="card-body">
               <h6 class="card-title">Hay - About A Lounge Chair AAL</h6>
+              <p class="card-text">$ 659.55</p>
               <div class="btn-group" role="group" aria-label="Basic example">
-                <button type="button" class="btn border-secondary">$ 659.55</button>
-                <button type="button" class="btn border-secondary">BUY NOW</button>
+                <button type="button" class="btn border-secondary"><a class="add-cart">ADD TO CART</a></button>
+                <button type="button" class="btn border-secondary"><a href="product_landing_page.html">BUY NOW</a></button>
               </div>
             </div>
           </div>          
@@ -237,9 +242,10 @@
             <img class="card-img-top" src="../midia/product6.png">
             <div class="card-body">
               <h6 class="card-title">TORY DESK CALENDAR</h6>
+              <p class="card-text">$ 410.99</p>
               <div class="btn-group" role="group" aria-label="Basic example">
-                <button type="button" class="btn border-secondary">$ 410.99</button>
-                <button type="button" class="btn border-secondary">BUY NOW</button>
+                <button type="button" class="btn border-secondary"><a class="add-cart">ADD TO CART</a></button>
+                <button type="button" class="btn border-secondary"><a href="product_landing_page.html">BUY NOW</a></button>
               </div>
             </div>
           </div>          
@@ -250,9 +256,10 @@
             <img class="card-img-top" src="../midia/product7.png">
             <div class="card-body">
               <h6 class="card-title">CH445 Wing Chair SUITE NY</h6>
+              <p class="card-text">$ 330.55</p>
               <div class="btn-group" role="group" aria-label="Basic example">
-                <button type="button" class="btn border-secondary">$ 330.55</button>
-                <button type="button" class="btn border-secondary">BUY NOW</button>
+                <button type="button" class="btn border-secondary"><a class="add-cart">ADD TO CART</a></button>
+                <button type="button" class="btn border-secondary"><a href="product_landing_page.html">BUY NOW</a></button>
               </div>
             </div>
           </div>          
@@ -376,7 +383,7 @@
             <p><a href="404.html">Testimonials</a></p>
             <p><a href="404.html">Contact</a></p>
           </div>
-          <div class="col-lg-2 mx-auto d-flex justify-content-between">            
+          <div class="col-lg-2 mx-auto d-flex justify-content-between" style="height: fit-content;">            
             <a href="https://www.facebook.com"><img src="../midia/ff.png"></a>
             <a href="https://myaccount.google.com"><img src="../midia/fg+.png"></a>
             <a href="https://twitter.com"><img src="../midia/ft.png"></a>
