--- a/HTML/404.html
+++ b/HTML/404.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="../CSS/style.CSS">
         <title>404</title>
     </head>
-    <body>
+    <body style="background: #f1edea;">
         <!--NAVIGATION BAR-->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top">
             <div class="container-fluid">
@@ -135,14 +135,14 @@
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb justify-content-center">
               <li class="breadcrumb-item"><a class="green" href="home_page.html">Home</a></li>
-              <li class="breadcrumb-item active" aria-current="page">Library</li>
+              <li class="breadcrumb-item active" aria-current="page">404</li>
             </ol>
             <h1 class="text-center">404</h1>
         </nav>
         <!--/BREADCRUMS-->
 
         <!--404-->
-        <div class="my-5 row notfound">
+        <div class="p-5 m-5 row notfound">
             <div class="container d-none d-lg-flex col-1 align-items-center">
                 <h1 id="oops" class="green">Oops!</h1>
             </div>
