--- a/HTML/product_landing_page.html
+++ b/HTML/product_landing_page.html
@@ -131,9 +131,18 @@
     </div>
     <!--/MODAL FORM-->
 
+    <!--BREADCRUMS-->
+    <nav aria-label="breadcrumb" class="mb-5">
+        <ol class="breadcrumb justify-content-center">
+          <li class="breadcrumb-item"><a class="green" href="home_page.html">Home</a></li>
+          <li class="breadcrumb-item active" aria-current="page">Product Page</li>
+        </ol>
+        <h1 class="text-center">Archi Desk Accessories Pen Cup</h1>
+    </nav>
+    <!--/BREADCRUMS-->
 
-    <!--PICTURES-->
-    <div class="container d-flex justify-content-center flex-column flex-md-row col-md-4"> 
+    <!--PRODUCT-->
+    <div class="container d-flex justify-content-center flex-column flex-md-row col-md-4 my-5"> 
         <div class="mx-auto my-auto">
             <img class="rounded" id="expandedImg" src="../midia/cardigan1.jpg">
         </div>
@@ -153,10 +162,115 @@
             </select>
             <div>
             </div>
+            <button id="loggin-btn" class="btn rounded-pill col-4 my-4">ADD TO CART</button>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec rutrum turpis in odio ornare, a mollis enim bibendum. Sed luctus feugiat tortor, et convallis diam ultrices eu. Fusce molestie urna ut nisl vulputate, eu eleifend massa iaculis. Morbi quis hendrerit mauris. Sed purus magna, porttitor eu nulla eu, placerat elementum arcu.</p>
         </div>
     </div>
-    <!--/PICTURES-->
+    <!--/PRODUCT-->
+
+    <!--TAB-->
+    <div id="tabs">
+        <nav>
+            <div class="nav nav-tabs" id="nav-tab" role="tablist">
+                <button class="nav-link active col-4 border-0" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-home" type="button" role="tab" aria-controls="nav-home" aria-selected="true"><h3>Description</h3></button>
+                <button class="nav-link col-4 border-0" id="nav-profile-tab" data-bs-toggle="tab" data-bs-target="#nav-profile" type="button" role="tab" aria-controls="nav-profile" aria-selected="false"><h3>Information</h3></button>
+                <button class="nav-link col-4 border-0" id="nav-contact-tab" data-bs-toggle="tab" data-bs-target="#nav-contact" type="button" role="tab" aria-controls="nav-contact" aria-selected="false"><h3>Contact</h3></button>
+            </div>
+        </nav>
+        <div class="tab-content" id="nav-tabContent">
+            <div class="tab-pane fade show active p-5" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam iaculis nulla non efficitur cursus. Nunc at vehicula augue, at sodales leo. Aenean feugiat dolor nibh, at aliquam nisl sollicitudin aliquam. Ut elit lorem, congue sit amet pellentesque eu, lacinia et elit. Praesent ut mi cursus, rhoncus ipsum ut, molestie tortor. Maecenas id feugiat ipsum. Duis vitae dictum arcu. Aenean vitae ante fermentum mauris condimentum consequat. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer at commodo leo.</div>
+            <div class="tab-pane fade p-5" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">Maecenas sed tellus id ligula sodales elementum. Pellentesque quis auctor sem, at mollis orci. Nunc pulvinar nisl finibus pharetra dapibus. In ac leo ut elit ornare congue elementum non nulla. Proin vestibulum quis velit id pharetra. Pellentesque ultrices augue at nibh sollicitudin rhoncus. Proin pulvinar mi vel dolor elementum porta. Sed id suscipit nibh, ac lobortis tellus.</div>
+            <div class="tab-pane fade p-5" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab">Vestibulum scelerisque elementum massa. Donec vel arcu leo. Mauris tellus nulla, pulvinar vel nunc quis, auctor aliquet odio. Nam fringilla ligula iaculis mauris aliquet tempor. Vivamus ac metus nec nunc mollis posuere et et lectus. Aliquam scelerisque dolor et pretium tempus. Pellentesque eu libero nisl. Morbi lacinia lectus lectus. Aenean mattis iaculis velit, in egestas erat euismod posuere. Nulla blandit diam massa, sed faucibus mauris eleifend eget. Integer rhoncus, lacus at sodales sagittis, est enim lobortis nisl, sit amet luctus velit nibh eu arcu. Morbi vitae ligula erat.</div>
+        </div>
+    </div>
+    <!--/TAB-->
+
+    <!--PRODUCT CARDS-->
+    <div class="pb-3" style="background: #f1edea;">  
+
+        <h3 class="pt-5 text-center my-5">Popular Items</h3>
+        
+        <div class="row mx-5 text-center">
+  
+          <div class="col-6 col-md-4 col-lg-3">
+            <div class="card mb-3">
+              <img class="card-img-top" src="../midia/product2.png">
+              <div class="card-body">
+                <h6 class="card-title">Hay - About A Lounge Chair AAL</h6>
+                <p class="card-text">$ 659.55</p>            
+                <div class="btn-group" role="group" aria-label="Basic example">
+                  <button type="button" class="btn border-secondary"><a class="add-cart">ADD TO CART</a></button>
+                  <button type="button" class="btn border-secondary"><a href="product_landing_page.html">BUY NOW</a></button>                
+                </div>
+              </div>
+            </div>            
+          </div>
+  
+          <div class="col-6 col-md-4 col-lg-3">
+            <div class="card mb-3">
+              <img class="card-img-top" src="../midia/product4.png">
+              <div class="card-body">
+                <h6 class="card-title">Cocktail Table Walnut | YES</h6>
+                <p class="card-text">$ 299.99</p>
+                <div class="btn-group" role="group" aria-label="Basic example">
+                  <button type="button" class="btn border-secondary"><a class="add-cart">ADD TO CART</a></button>
+                  <button type="button" class="btn border-secondary"><a href="product_landing_page.html">BUY NOW</a></button>
+                </div>
+              </div>
+            </div>          
+          </div>
+  
+          <div class="col-6 col-md-4 col-lg-3">
+            <div class="card mb-3">
+              <img class="card-img-top" src="../midia/product6.png">
+              <div class="card-body">
+                <h6 class="card-title">TORY DESK CALENDAR</h6>
+                <p class="card-text">$ 410.99</p>
+                <div class="btn-group" role="group" aria-label="Basic example">
+                  <button type="button" class="btn border-secondary"><a class="add-cart">ADD TO CART</a></button>
+                  <button type="button" class="btn border-secondary"><a href="product_landing_page.html">BUY NOW</a></button>
+                </div>
+              </div>
+            </div>          
+          </div>
+          
+          <div class="col-6 col-md-4 col-lg-3">
+            <div class="card mb-3">
+              <img class="card-img-top" src="../midia/product7.png">
+              <div class="card-body">
+                <h6 class="card-title">CH445 Wing Chair SUITE NY</h6>
+                <p class="card-text">$ 330.55</p>
+                <div class="btn-group" role="group" aria-label="Basic example">
+                  <button type="button" class="btn border-secondary"><a class="add-cart">ADD TO CART</a></button>
+                  <button type="button" class="btn border-secondary"><a href="product_landing_page.html">BUY NOW</a></button>
+                </div>
+              </div>
+            </div>          
+          </div>  
+
+        </div>
+      </div>
+      <!--/PRODUCT CARDS-->
+
+    <!--SERVICES-->
+    <div id="servicebg" class="d-flex flex-md-row flex-column justify-content-between text-white">
+        <div class="p-md-5 p-sm-3">
+          <img src="../midia/Delivery.png" class="services p-md-3 p-sm-1">
+          <h3>FOCUS</h3>
+          <p>Our unwavering focus on superior service delivery and building next generation competencies</p>
+        </div>
+        <div class="p-md-5 p-sm-3">
+          <img src="../midia/Recycle.png" class="services p-md-3 p-sm-1">
+          <h3>METHOD</h3>
+          <p>A standardized methodology designed to deliver measurable business results and predictable costs</p>
+        </div>
+        <div class="p-md-5 p-sm-3">
+          <img src="../midia/Clipboard.png" class="services p-md-3 p-sm-1">
+          <h3>KNOWLEDGE</h3>
+          <p>A highly skilled, proactive workforce that reliably improves each client's ROI while mitigating their business risk</p>
+        </div>
+      </div>
+      <!--/SERVICES-->
 
     <!--FOOTER-->
     <footer class="text-center text-lg-start bg-light text-muted">
