--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-        <link rel="stylesheet" href="../CSS/style.CSS">
+        <link rel="stylesheet" href="style.CSS">
         <title>404</title>
     </head>
     <body style="background: #f1edea;">
@@ -12,8 +12,8 @@
         <nav class="navbar navbar-expand-lg navbar-light fixed-top">
             <div class="container-fluid">
               <div>
-                <a class="navbar-brand" href="home_page.html">
-                  <img src="../midia/logo.png" class="d-inline-block">
+                <a class="navbar-brand" href="index.html">
+                  <img src="logo.png" class="d-inline-block">
                   <h1>OSF</h1>
                   </h1>
                 </a>
@@ -79,18 +79,18 @@
                   </li>
                   <ul class="nav-bar nav justify-content-center">
                     <li class="nav-item">
-                      <a class="nav-link" href="404.html"><img src="../midia/search.png"></a>
+                      <a class="nav-link" href="404.html"><img src="search.png"></a>
                     </li>
                     <li class="nav-item">              
                       <button type="button" class="btn nav-link" data-bs-toggle="modal" data-bs-target="#login_form">
-                        <img src="../midia/user.png">               
+                        <img src="user.png">               
                       </button>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="404.html"><img src="../midia/heart.png"></a>
+                      <a class="nav-link" href="404.html"><img src="heart.png"></a>
                     </li>
                     <li class="nav-item cart">
-                      <a class="nav-link" href="cart_page.html"><img src="../midia/bag.png"><span>0</span></a>
+                      <a class="nav-link" href="cart_page.html"><img src="bag.png"><span>0</span></a>
                     </li>
                   </ul>
                 </ul>
@@ -117,7 +117,7 @@
                             <div class="form-group">
                             <label for="password">Password</label>
                             <input type="password" class="form-control rounded-pill" id="password" placeholder="@*Aaa123">
-                            <img id="togglepassword" class="float-end" role="button" src="../midia/visibility.png">
+                            <img id="togglepassword" class="float-end" role="button" src="visibility.png">
                             </div>
                             <p id="validationcheck"></p>            
                         </form>
@@ -134,7 +134,7 @@
         <!--BREADCRUMS-->
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb justify-content-center">
-              <li class="breadcrumb-item"><a class="green" href="home_page.html">Home</a></li>
+              <li class="breadcrumb-item"><a class="green" href="index.html">Home</a></li>
               <li class="breadcrumb-item active" aria-current="page">404</li>
             </ol>
             <h1 class="text-center">404</h1>
@@ -152,7 +152,7 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque blandit orci ut cursus tincidunt. Curabitur vestibulum augue nibh, gravida dignissim augue venenatis in. Etiam vel diam ullamcorper.</p> 
                 
                 <p>Porttitor augue ac, pellentesque augue. Suspendisse luctus tempus enim id bibendum. Praesent a sem eget nisi condimentum ultricies. Aenean tristique diam at lacus mattis suscipit. Vivamus ullamcorper augue aliquam augue cursus varius. Pellentesque eget felis libero.</p>
-                <a href="home_page.html" class="text-decoration-none"><small class="green">Go back to Homepage</small></a>
+                <a href="index.html" class="text-decoration-none"><small class="green">Go back to Homepage</small></a>
                 <h3 class="mt-4">Search our site</h3>
                 <input class="form-control rounded-pill" placeholder="SEARCH">
             </div>
@@ -202,10 +202,10 @@
                     <p><a href="404.html">Contact</a></p>
                 </div>
                 <div class="col-lg-2 mx-auto d-flex justify-content-between icons">            
-                    <a href="https://www.facebook.com"><img src="../midia/ff.png"></a>
-                    <a href="https://myaccount.google.com"><img src="../midia/fg+.png"></a>
-                    <a href="https://twitter.com"><img src="../midia/ft.png"></a>
-                    <a href="https://pinterest.com"><img src="../midia/fp.png"></a>
+                    <a href="https://www.facebook.com"><img src="ff.png"></a>
+                    <a href="https://myaccount.google.com"><img src="fg+.png"></a>
+                    <a href="https://twitter.com"><img src="ft.png"></a>
+                    <a href="https://pinterest.com"><img src="fp.png"></a>
                 </div>
                 </div>
             </div>
@@ -213,6 +213,6 @@
         <!--/FOOTER-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-        <script src="../JavaScript/Script.js"></script>
+        <script src="Script.js"></script>
     </body>
 </html>
