--- a/product_landing_page.html
+++ b/product_landing_page.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-    <link rel="stylesheet" href="../CSS/style.CSS">
+    <link rel="stylesheet" href="style.CSS">
     <title>Product Landing Page</title>
 </head>
 <body>
@@ -12,8 +12,8 @@
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
         <div class="container-fluid">
             <div>
-            <a class="navbar-brand" href="home_page.html">
-                <img src="../midia/logo.png" class="d-inline-block">
+            <a class="navbar-brand" href="index.html">
+                <img src="logo.png" class="d-inline-block">
                 <h1>OSF</h1>
                 </h1>
             </a>
@@ -79,18 +79,18 @@
                 </li>
                 <ul class="nav-bar nav justify-content-center">
                 <li class="nav-item">
-                    <a class="nav-link" href="404.html"><img src="../midia/search.png"></a>
+                    <a class="nav-link" href="404.html"><img src="search.png"></a>
                 </li>
                 <li class="nav-item">              
                     <button type="button" class="btn nav-link" data-bs-toggle="modal" data-bs-target="#login_form">
-                    <img src="../midia/user.png">               
+                    <img src="user.png">               
                     </button>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="404.html"><img src="../midia/heart.png"></a>
+                    <a class="nav-link" href="404.html"><img src="heart.png"></a>
                 </li>
                 <li class="nav-item cart">
-                    <a class="nav-link" href="cart_page.html"><img src="../midia/bag.png"><span>0</span></a>
+                    <a class="nav-link" href="cart_page.html"><img src="bag.png"><span>0</span></a>
                 </li>
                 </ul>
             </ul>
@@ -117,7 +117,7 @@
                         <div class="form-group">
                         <label for="password">Password</label>
                         <input type="password" class="form-control rounded-pill" id="password" placeholder="@*Aaa123">
-                        <img id="togglepassword" class="float-end" role="button" src="../midia/visibility.png">
+                        <img id="togglepassword" class="float-end" role="button" src="visibility.png">
                         </div>
                         <p id="validationcheck"></p>            
                     </form>
@@ -134,7 +134,7 @@
     <!--BREADCRUMS-->
     <nav aria-label="breadcrumb" class="mb-5">
         <ol class="breadcrumb justify-content-center">
-          <li class="breadcrumb-item"><a class="green" href="home_page.html">Home</a></li>
+          <li class="breadcrumb-item"><a class="green" href="index.html">Home</a></li>
           <li class="breadcrumb-item active" aria-current="page">Product Page</li>
         </ol>
         <h1 class="text-center">Archi Desk Accessories Pen Cup</h1>
@@ -144,13 +144,13 @@
     <!--PRODUCT-->
     <div class="container d-flex justify-content-center flex-column flex-md-row col-md-4 my-5"> 
         <div class="mx-auto my-auto">
-            <img class="rounded" id="expandedImg" src="../midia/cardigan1.jpg">
+            <img class="rounded" id="expandedImg" src="cardigan1.jpg">
         </div>
         <div class="mx-auto my-auto d-flex flex-row flex-md-column">
-            <img src="../midia/cardigan1_small.jpg" id="1" class="imgs m-1 rounded">
-            <img src="../midia/cardigan2_small.jpg" id="2" class="imgs m-1 rounded">
-            <img src="../midia/cardigan3_small.jpg" id="3" class="imgs m-1 rounded">
-            <img src="../midia/cardigan4_small.jpg" id="4" class="imgs m-1 rounded">
+            <img src="cardigan1_small.jpg" id="1" class="imgs m-1 rounded">
+            <img src="cardigan2_small.jpg" id="2" class="imgs m-1 rounded">
+            <img src="cardigan3_small.jpg" id="3" class="imgs m-1 rounded">
+            <img src="cardigan4_small.jpg" id="4" class="imgs m-1 rounded">
         </div>
         <div class="row col-12 mx-5">
             <h1 class="text-center">$ 299.99</h1>
@@ -164,6 +164,12 @@
             </div>
             <button id="loggin-btn" class="btn rounded-pill col-4 my-4">ADD TO CART</button>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec rutrum turpis in odio ornare, a mollis enim bibendum. Sed luctus feugiat tortor, et convallis diam ultrices eu. Fusce molestie urna ut nisl vulputate, eu eleifend massa iaculis. Morbi quis hendrerit mauris. Sed purus magna, porttitor eu nulla eu, placerat elementum arcu.</p>
+            <div class="mx-auto d-flex justify-content-around icons">            
+              <a href="https://www.facebook.com"><img src="ff.png"></a>
+              <a href="https://myaccount.google.com"><img src="fg+.png"></a>
+              <a href="https://twitter.com"><img src="ft.png"></a>
+              <a href="https://pinterest.com"><img src="fp.png"></a>
+          </div>
         </div>
     </div>
     <!--/PRODUCT-->
@@ -194,7 +200,7 @@
   
           <div class="col-6 col-md-4 col-lg-3">
             <div class="card mb-3">
-              <img class="card-img-top" src="../midia/product2.png">
+              <img class="card-img-top" src="product2.png">
               <div class="card-body">
                 <h6 class="card-title">Hay - About A Lounge Chair AAL</h6>
                 <p class="card-text">$ 659.55</p>            
@@ -208,7 +214,7 @@
   
           <div class="col-6 col-md-4 col-lg-3">
             <div class="card mb-3">
-              <img class="card-img-top" src="../midia/product4.png">
+              <img class="card-img-top" src="product4.png">
               <div class="card-body">
                 <h6 class="card-title">Cocktail Table Walnut | YES</h6>
                 <p class="card-text">$ 299.99</p>
@@ -222,7 +228,7 @@
   
           <div class="col-6 col-md-4 col-lg-3">
             <div class="card mb-3">
-              <img class="card-img-top" src="../midia/product6.png">
+              <img class="card-img-top" src="product6.png">
               <div class="card-body">
                 <h6 class="card-title">TORY DESK CALENDAR</h6>
                 <p class="card-text">$ 410.99</p>
@@ -236,7 +242,7 @@
           
           <div class="col-6 col-md-4 col-lg-3">
             <div class="card mb-3">
-              <img class="card-img-top" src="../midia/product7.png">
+              <img class="card-img-top" src="product7.png">
               <div class="card-body">
                 <h6 class="card-title">CH445 Wing Chair SUITE NY</h6>
                 <p class="card-text">$ 330.55</p>
@@ -255,17 +261,17 @@
     <!--SERVICES-->
     <div id="servicebg" class="d-flex flex-md-row flex-column justify-content-between text-white">
         <div class="p-md-5 p-sm-3">
-          <img src="../midia/Delivery.png" class="services p-md-3 p-sm-1">
+          <img src="Delivery.png" class="services p-md-3 p-sm-1">
           <h3>FOCUS</h3>
           <p>Our unwavering focus on superior service delivery and building next generation competencies</p>
         </div>
         <div class="p-md-5 p-sm-3">
-          <img src="../midia/Recycle.png" class="services p-md-3 p-sm-1">
+          <img src="Recycle.png" class="services p-md-3 p-sm-1">
           <h3>METHOD</h3>
           <p>A standardized methodology designed to deliver measurable business results and predictable costs</p>
         </div>
         <div class="p-md-5 p-sm-3">
-          <img src="../midia/Clipboard.png" class="services p-md-3 p-sm-1">
+          <img src="Clipboard.png" class="services p-md-3 p-sm-1">
           <h3>KNOWLEDGE</h3>
           <p>A highly skilled, proactive workforce that reliably improves each client's ROI while mitigating their business risk</p>
         </div>
@@ -315,10 +321,10 @@
             <p><a href="404.html">Contact</a></p>
         </div>
         <div class="col-lg-2 mx-auto d-flex justify-content-between icons">            
-            <a href="https://www.facebook.com"><img src="../midia/ff.png"></a>
-            <a href="https://myaccount.google.com"><img src="../midia/fg+.png"></a>
-            <a href="https://twitter.com"><img src="../midia/ft.png"></a>
-            <a href="https://pinterest.com"><img src="../midia/fp.png"></a>
+            <a href="https://www.facebook.com"><img src="ff.png"></a>
+            <a href="https://myaccount.google.com"><img src="fg+.png"></a>
+            <a href="https://twitter.com"><img src="ft.png"></a>
+            <a href="https://pinterest.com"><img src="fp.png"></a>
         </div>
         </div>
     </div>
@@ -327,6 +333,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    <script src="../JavaScript/Script.js"></script>
+    <script src="Script.js"></script>
 </body>
 </html>
